syntax = "proto3";

package network.forta;

import public "publisher.proto";
import public "agent.proto";
import public "metrics.proto";

option go_package = "./;protocol";

message SignedAlertBatch {
  AlertBatch data = 1;
  Signature signature = 2;
}

message AlertBatch {
  uint64 chainId = 1;
  uint64 blockStart = 2;
  uint64 blockEnd = 3;
  uint32 alertCount = 4;
  Finding.Severity maxSeverity = 5;
  repeated BlockResults results = 6;
  repeated BatchAgent agents = 7;
  repeated AgentMetrics metrics = 8;
  ScannerVersion scannerVersion = 9;
}

message BlockResults {
  Block block = 1;
  repeated AgentAlerts results = 2;
  repeated TransactionResults transactions = 3;
}

message TransactionResults {
  TransactionEvent transaction = 1;
  repeated AgentAlerts results = 2;
}

message AgentAlerts {
  string agentManifest = 1;
  repeated SignedAlert alerts = 2;
}

message Block {
  string blockHash = 1;
  uint64 blockNumber = 2;
  string blockTimestamp = 3;
}

message BatchAgent {
  AgentInfo info = 1;
  repeated uint64 blocks = 2;
  repeated string transactions = 3;
}

message ScannerVersion {
  string commit = 1;
  string ipfs = 2;
}
